--- a/port.html
+++ b/port.html
@@ -7,6 +7,7 @@
     <title>Douglas Silva Portfólio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
@@ -23,6 +24,37 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+
+    <section class="sec-port">
+
+        <ul>
+            <li>
+                <a href="" target="_self"><img id="btn-ilustra" src="css/images/btn-ilustracao.png" alt="Ilustrações"></a>
+            </li>
+            <li>
+                <a href="" target="_self"><img id="btn-design" src="css/images/btn-design.png" alt="Ilustrações"></a>
+            </li>
+            <li>
+                <a href="" target="_self"><img id="btn-modelagem" src="css/images/btn-modelagem.png" alt="Ilustrações"></a>
+            </li>
+        </ul>
+
+    </section>
+
+    <footer id="redes">
+        <h4 id="copyright">© Douglas Silva 2018</h4>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/dougsillva" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></i> </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/dougui_silva/" target="_blank"> <i class="fab fa-instagram fa-2x"></i> </a>
+            </li>
+            <li>
+                <a href="https://www.behance.net/douguisilva" target="_blank"> <i class="fab fa-behance fa-2x"></i></a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 
