--- a/port-2.html
+++ b/port-2.html
@@ -25,24 +25,36 @@
         </ul>
     </nav>
 
-    <section class="sec-port">
+    <section class="sec-port-2">
+        <p class="nav-breadcrumb">
+            <a class="breadcrumb" href="port.html">
+                <h4>Portfólio</h4>
+            </a>
+            <h4 class="arrow">></h4><br>
+            <h1 class="label-port">Ilustrações</h1>
+        </p>
 
-        <ul>
-            <li>
-                <a href="port-2.html" target="_self"><img id="btn-ilustra" src="css/images/btn-ilustracao.png" alt="Ilustrações"></a>
-            </li>
-            <li>
-                <a href="" target="_self"><img id="btn-design" src="css/images/btn-design.png" alt="Ilustrações"></a>
-            </li>
-            <li>
-                <a href="" target="_self"><img id="btn-modelagem" src="css/images/btn-modelagem.png" alt="Ilustrações"></a>
-            </li>
-        </ul>
-
+        <table>
+            <tr>
+                <td><img class="port-cell" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
+                <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
+                <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
+            </tr>
+            <tr>
+                <td><img class="port-cell" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
+                <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
+                <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
+            </tr>
+            <tr>
+                <td><img class="port-cell" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
+                <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
+                <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
+            </tr>
+        </table>
     </section>
 
-    <footer id="redes">
-        <h4 id="copyright">© Douglas Silva 2018</h4>
+    <footer id="footer-normal">
+        <h4 id="copyright2">© Douglas Silva 2018</h4>
         <ul>
             <li>
                 <a href="https://www.facebook.com/dougsillva" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></i> </a>
