--- a/sobre.html
+++ b/sobre.html
@@ -64,8 +64,8 @@
 
     </section>
 
-    <footer id="redes">
-        <h4 id="copyright">© Douglas Silva 2018</h4>
+    <footer id="footer-normal">
+        <h4 id="copyright2">© Douglas Silva 2018</h4>
         <ul>
             <li>
                 <a href="https://www.facebook.com/dougsillva" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></i> </a>
