--- a/port-2.html
+++ b/port-2.html
@@ -36,12 +36,12 @@
 
         <table>
             <tr>
-                <td><img class="port-cell" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
-                <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
-                <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
+                <div class="imagem"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></td>
+                <td><img class="imagem" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
+                <td><img class="imagem" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
             </tr>
             <tr>
-                <td><img class="port-cell" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
+                <td><img class="imagem" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
                 <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
                 <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
             </tr>
