--- a/port-2.html
+++ b/port-2.html
@@ -33,24 +33,17 @@
             <h4 class="arrow">></h4><br>
             <h1 class="label-port">Ilustrações</h1>
         </p>
-
-        <table>
-            <tr>
-                <div class="imagem"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></td>
-                <td><img class="imagem" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
-                <td><img class="imagem" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
-            </tr>
-            <tr>
-                <td><img class="imagem" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
-                <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
-                <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
-            </tr>
-            <tr>
-                <td><img class="port-cell" src="css/images/ilustra-sand.png" alt="Ilustrações"></td>
-                <td><img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações"></td>
-                <td><img class="port-cell" src="css/images/ilustra-dragons.png" alt="Ilustrações"></td>
-            </tr>
-        </table>
+        <div class="grid-container">
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>  
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>  
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>
+          <div class="grid-item"><img class="port-cell" src="css/images/sand.png" alt="Ilustrações"></div>  
+        </div>
     </section>
 
     <footer id="footer-normal">
