--- a/contato.html
+++ b/contato.html
@@ -26,11 +26,13 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    <section id="contato">
+        <h1>Enteressado no meu trabalho?</h1>
+        <p>Entre em contato comigo para tirar suas dúvidas sobre <br>orçamento ou qualquer outra coisas.</p>
+    </section>
 
     <section class="contato">
 
-        <h1>Dúvidas?</h1>
-        <p>Mande-me um email ao lado para tirar suas dúvidas. É bem fácil.</p>
 
         <form>
             <div class="group">
