--- a/port.html
+++ b/port.html
@@ -32,10 +32,10 @@
                 <a href="port-2.html" target="_self"><img id="btn-ilustra" src="css/images/btn-ilustracao.png" alt="Ilustrações"></a>
             </li>
             <li>
-                <a href="" target="_self"><img id="btn-design" src="css/images/btn-design.png" alt="Ilustrações"></a>
+                <a href="port-3.html" target="_self"><img id="btn-design" src="css/images/btn-design.png" alt="Ilustrações"></a>
             </li>
             <li>
-                <a href="" target="_self"><img id="btn-modelagem" src="css/images/btn-modelagem.png" alt="Ilustrações"></a>
+                <a href="port-4.html" target="_self"><img id="btn-modelagem" src="css/images/btn-modelagem.png" alt="Ilustrações"></a>
             </li>
         </ul>
 
