--- a/contato.html
+++ b/contato.html
@@ -37,19 +37,19 @@
         <form>
             <div class="group">
                 <input type="text" pattern="[a-z\s]+$" maxlength="37" required>
-                <label>Nome</label>
+                <label class="contact">Nome</label>
                 <span class="bar"></span>
             </div>
 
             <div class="group">
                 <input type="text" pattern="[a-z\s]+$" maxlength="37" required>
-                <label>Email</label>
+                <label class="contact">Email</label>
                 <span class="bar"></span>
             </div>
 
             <div class="group">
                 <textarea type="mensagem" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" maxlength="200" required></textarea>
-                <label>Mensagem</label>
+                <label class="contact">Mensagem</label>
                 <span class="bar"></span>
             </div>
 
