--- a/port-3.html
+++ b/port-3.html
@@ -35,26 +35,78 @@
             <h1 class="label-port">Design</h1>
         </p>
 
+        <div class="grid-container">
+            <div class="grid-item">
+                <figcaption>Volare</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare">
 
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <figcaption>Jandaia</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <figcaption>Cecomil</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/design-cecomil.png" alt="Cecomil">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <figcaption>Draw In</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/design-drawin.png" alt="Draw In">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <figcaption>Time Mentor</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/design-timementor.png" alt="Time Mentor">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+        </div>
+        <!-- 
         <table>
             <tr>
                 <td>
                     <figure class="container-jobs">
-                        <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare" />
                         <figcaption>Volare</figcaption>
-                        <!-- The Modal -->
+                        <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare" />
+
                         <div id="myModal" class="modal">
                             <span class="close">&times;</span>
                             <img class="modal-content" id="img01">
-                            <!-- <img class="modal-content" id="img01"> -->
                             <div id="caption"></div>
                         </div>
                     </figure>
                 </td>
                 <td>
                     <figure class="container-jobs">
-                        <img id="myImg2" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia" />
                         <figcaption>Jandaia</figcaption>
+                        <img id="myImg2" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia" />
+
                         <div id="myModal" class="modal">
                             <span class="close">&times;</span>
                             <img class="modal-content" id="img02">
@@ -92,7 +144,7 @@
                 </td>
 
             </tr>
-        </table>
+        </table> -->
     </section>
 
     <footer id="footer-normal">
