--- a/port-4.html
+++ b/port-4.html
@@ -36,17 +36,47 @@
         </p>
 
 
-        <table>
+        <div class="grid-container">
+            <div class="grid-item">
+                <figcaption>Charizard</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/model-charizard.png" alt="Charizard">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <figcaption>Impmon</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/model-impmon.png" alt="Impmon">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <figcaption>Pokebola</figcaption>
+                <img id="myImg" class="port-cell" src="css/images/model-pokebola.png" alt="Pokebola">
+
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+        </div>
+        <!-- <table>
             <tr>
                 <td>
                     <figure class="container-jobs">
                         <img id="myImg" class="port-cell" src="css/images/model-charizard.png" alt="Charizard" />
                         <figcaption>Charizard</figcaption>
-                        <!-- The Modal -->
                         <div id="myModal" class="modal">
                             <span class="close">&times;</span>
                             <img class="modal-content" id="img01">
-                            <!-- <img class="modal-content" id="img01"> -->
                             <div id="caption"></div>
                         </div>
                     </figure>
@@ -75,7 +105,7 @@
                     </figure>
 
                 </td>
-            </tr>
+            </tr> -->
     </section>
 
     <footer id="redes">
