--- a/port.html
+++ b/port.html
@@ -26,8 +26,37 @@
     </nav>
 
     <section class="sec-port">
+        <div class="grid-container-port">
+            <div class="grid-item-port">
+                <figcaption>Ilustrações</figcaption>
+                <a href="port-2.html" target="_self"><img id="myImg" class="port-cell-2" src="css/images/btn-ilustracao.png" alt="Ilustrações"></a>
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item-port">
+                <figcaption>Design</figcaption>
+                <a href="port-3.html" target="_self"><img id="myImg" class="port-cell-2" src="css/images/btn-design.png" alt="Design"></a>
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+            <div class="grid-item-port">
+                <figcaption>Modelagem 3D</figcaption>
+                <a href="port-4.html" target="_self"><img id="myImg" class="port-cell-2" src="css/images/btn-modelagem.png" alt="Modelagem 3D"></a>
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" class="img" id="img01">
+                    <div class="caption" id="caption"></div>
+                </div>
+            </div>
+        </div>
 
-        <ul>
+        <!-- <ul>
             <li>
                 <a href="port-2.html" target="_self"><img id="btn-ilustra" src="css/images/btn-ilustracao.png" alt="Ilustrações"></a>
             </li>
@@ -37,7 +66,7 @@
             <li>
                 <a href="port-4.html" target="_self"><img id="btn-modelagem" src="css/images/btn-modelagem.png" alt="Ilustrações"></a>
             </li>
-        </ul>
+        </ul> -->
 
     </section>
 
