--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
 
-    <nav>
+    <!-- <nav>
         <div class="brand">
             <a href="index.html">
                 <h2>Douglas Silva</h2>
@@ -24,8 +25,35 @@
             <li><a href="port.html">Portfólio</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
-    </nav>
-    <section class="sec1"></section>
+    </nav> -->
+    <div class="topnav" id="myTopnav">
+        <a id="navbar-firstitem" href="index.html" class="active">Douglas Silva</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+        <a class="navbar-items" href="sobre.html">CONTATO</a>
+        <a class="navbar-items" href="port.html">PORTFÓLIO</a>
+        <a class="navbar-items" href="contato.html">SOBRE</a>
+    </div>
+
+    <ul class="slider">
+        <li>
+            <input type="radio" class="slide-btn" id="slide1" name="slide" checked>
+            <label for="slide1"></label>
+            <img src="css/images/bg-1.png" />
+        </li>
+        <li>
+            <input type="radio" class="slide-btn" id="slide2" name="slide">
+            <label for="slide2"></label>
+            <img src="css/images/bg-2.png" />
+        </li>
+        <li>
+            <input type="radio" class="slide-btn" id="slide3" name="slide">
+            <label for="slide3"></label>
+            <img src="css/images/bg-3.png" />
+        </li>
+    </ul>
+
     <footer id="redes">
         <h4 id="copyright">© Douglas Silva 2018</h4>
         <ul>
