--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
 
-    <!-- <nav>
+    <nav>
         <div class="brand">
             <a href="index.html">
                 <h2>Douglas Silva</h2>
@@ -25,16 +24,7 @@
             <li><a href="port.html">Portfólio</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
-    </nav> -->
-    <div class="topnav" id="myTopnav">
-        <a id="navbar-firstitem" href="index.html" class="active">Douglas Silva</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-        <a class="navbar-items" href="sobre.html">CONTATO</a>
-        <a class="navbar-items" href="port.html">PORTFÓLIO</a>
-        <a class="navbar-items" href="contato.html">SOBRE</a>
-    </div>
+    </nav>
 
     <ul class="slider">
         <li>
